--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "marzukia.github.io"]
 	path = marzukia.github.io
 	url = https://github.com/marzukia/marzukia.github.io.git
+[submodule "themes/hugo-kiera"]
+	path = themes/hugo-kiera
+	url = https://github.com/funkydan2/hugo-kiera.git
