new post or changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 [submodule "themes/etch"]
 	path = themes/etch
 	url = git@github.com:LukasJoswiak/etch.git
+[submodule "test"]
+	path = marzukia.github.io
+	url = git@github.com:marzukia/marzukia.github.io
+	branch = master
