--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,8 @@
 [submodule "themes/etch"]
 	path = themes/etch
 	url = git@github.com:LukasJoswiak/etch.git
-[submodule "test"]
+
+[submodule "marzukia.github.io"]
 	path = marzukia.github.io
-	url = git@github.com:marzukia/marzukia.github.io
+	url = git@github.com:marzukia/marzukia.github.io.git
 	branch = master
