--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "themes/anatole"]
 	path = themes/anatole
 	url = https://github.com/lxndrblz/anatole.git
+[submodule "marzukia.github.io"]
+	path = marzukia.github.io
+	url = git@github.com:marzukia/marzukia.github.io.git
