--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ enableInlineShortcodes = true
 pygmentsCodeFences = true
 
 [params]
+  defaultOGImage = "https://mrzk.io/images/og-banner.png"
   description = "Personal dev blog of Andryo Marzuki. I write about technology, data, and other geek hobbies that I happen to have."
   copyright = "© 2019-2021, Andryo Marzuki"
   dark = "auto"
