add ogbanner for seo

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -10,6 +10,8 @@ enableQuicklink = true
 
 fingerprintAlgorithm = "sha256"
 
+[seo]
+  ogBanner = "img/ogbanner.png"
 
 [header]
   layout = "basic" # valid options: basic, hamburger, hybrid, custom
